WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320263
Potential crash under WebViewImpl::insertText() with a zero-length attributed string
https://bugs.webkit.org/show_bug.cgi?id=320263
Summary
Potential crash under WebViewImpl::insertText() with a zero-length attributed...
Ahmad Saleem
Reported
2026-07-24 22:07:00 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-24 22:07:08 PDT
<
rdar://problem/183187277
>
Ahmad Saleem
Comment 2
2026-07-24 22:08:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70163
EWS
Comment 3
2026-07-25 21:26:06 PDT
Committed
317932@main
(63d08dbe5305): <
https://commits.webkit.org/317932@main
> Reviewed commits have been landed. Closing PR #70163 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug